--- a/Main/Addins/Outlook2010CV/Outlook2010CV.csproj
+++ b/Main/Addins/Outlook2010CV/Outlook2010CV.csproj
@@ -177,6 +177,9 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="..\..\Common\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Outlook2010CVAddIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
