updated installer. updated OutputPath for addin.

--- a/Main/Addins/Outlook2010CV/Outlook2010CV.csproj
+++ b/Main/Addins/Outlook2010CV/Outlook2010CV.csproj
@@ -82,7 +82,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\BuildBinaries\</OutputPath>
+    <OutputPath>..\..\BuildBinaries\</OutputPath>
     <EnableUnmanagedDebugging>false</EnableUnmanagedDebugging>
     <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
@@ -107,7 +107,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\BuildBinaries\</OutputPath>
+    <OutputPath>..\..\BuildBinaries\</OutputPath>
     <EnableUnmanagedDebugging>false</EnableUnmanagedDebugging>
     <DefineConstants>$(DefineConstants);TRACE</DefineConstants>
     <WarningLevel>4</WarningLevel>
