--- a/Main/Addins/Outlook2007CV/Outlook2007CV.csproj
+++ b/Main/Addins/Outlook2007CV/Outlook2007CV.csproj
@@ -190,8 +190,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.AddIn" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
