--- a/Main/Addins/Outlook2010CV/Outlook2010CV.csproj
+++ b/Main/Addins/Outlook2010CV/Outlook2010CV.csproj
@@ -24,8 +24,8 @@
     <ProjectGuid>{8582DA15-2292-4816-990B-3BF2F28E1C74}</ProjectGuid>
     <OutputType>Library</OutputType>
     <NoStandardLibraries>false</NoStandardLibraries>
-    <RootNamespace>Outlook2010CV</RootNamespace>
-    <AssemblyName>Outlook2010CV</AssemblyName>
+    <RootNamespace>ControlledVocabulary.Outook</RootNamespace>
+    <AssemblyName>ControlledVocabulary.Outook</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -44,10 +44,10 @@
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>days</UpdateIntervalUnits>
     <IsWebBootstrapper>True</IsWebBootstrapper>
-    <ProductName>Outlook2010CV</ProductName>
+    <ProductName>ControlledVocabulary.Outook</ProductName>
     <PublisherName />
     <SupportUrl />
-    <FriendlyName>Outlook2010CV</FriendlyName>
+    <FriendlyName>ControlledVocabulary.Outook</FriendlyName>
     <OfficeApplicationDescription />
     <LoadBehavior>3</LoadBehavior>
   </PropertyGroup>
@@ -252,7 +252,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{BAA0C2D2-18E2-41B9-852F-F413020CAA33}">
         <ProjectProperties HostName="Outlook" HostPackage="{20A848B8-E01F-4801-962E-25DB0FF57389}" OfficeVersion="14.0" VstxVersion="4.0" ApplicationType="Outlook" Language="cs" TemplatesPath="" DebugInfoExeName="#Software\Microsoft\Office\14.0\Outlook\InstallRoot\Path#outlook.exe" AddItemTemplatesGuid="{66FE057A-6BD5-4A46-8060-3C3E596574A0}" />
-        <Host Name="Outlook" GeneratedCodeNamespace="Outlook2010CV" IconIndex="0">
+        <Host Name="Outlook" GeneratedCodeNamespace="ControlledVocabulary.Outook" IconIndex="0">
           <HostItem Name="ThisAddIn" Code="ThisAddIn.cs" CanonicalName="AddIn" CanActivate="false" IconIndex="1" Blueprint="ThisAddIn.Designer.xml" GeneratedCode="ThisAddIn.Designer.cs" />
         </Host>
       </FlavorProperties>
