--- a/Main/WindowsClient/WindowsClient.csproj
+++ b/Main/WindowsClient/WindowsClient.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ControlledVocabulary</RootNamespace>
     <AssemblyName>Controlled Vocabulary Windows Client</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -31,6 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\BuildBinaries\Controlled Vocabulary Windows Client.xml</DocumentationFile>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -43,6 +44,7 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>..\Common\ControlledVocabulary.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>..\BuildBinaries\Controlled Vocabulary Windows Client.xml</DocumentationFile>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Images\ControlledVocabulary.ico</ApplicationIcon>
@@ -143,7 +145,9 @@
     <Content Include="AssemblyReferences\Ionic.Zip.dll" />
     <Resource Include="Images\newlogo.png" />
     <Resource Include="Sample\ZuluMail\button.xml" />
-    <Resource Include="Sample\ZuluMail\config.xml" />
+    <Resource Include="Sample\ZuluMail\config.xml">
+      <SubType>Designer</SubType>
+    </Resource>
     <Resource Include="Sample\ZuluMail\images\Blue.png" />
     <Resource Include="Sample\ZuluMail\images\Green.png" />
     <Resource Include="Sample\ZuluMail\images\Red.png" />
